--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="Style1.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
 
     <title>FindMyPrecious - Integration 1</title>
 </head>
